--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
